# rs_media_splitter_worker

./: .travis.yml  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
examples/: process_10_percent_max_5_seconds.json  process_end_of_content.json  split_100_segments.json
src/: duration.rs  main.rs  message.rs  split_policy.rs
