[package]
name = "media_splitter_worker"
version = "0.1.0"
authors = [
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
edition = "2018"

[dependencies]
mcai_worker_sdk = "0.11.6"
schemars = "0.7.6"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
stainless_ffmpeg = { git = "https://github.com/nomalab/stainless-ffmpeg.git", branch = "master" }
