[package]
name = "media_splitter_worker"
version = "0.1.2"
authors = [
  "Valentin Noel <valentin.noel@media-io.com>",
  "Marc-Antoine Arnaud <maarnaud@media-io.com>"
]
edition = "2018"

[dependencies]
mcai_worker_sdk = "=0.11.9-rc1"
schemars = "0.8.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
stainless_ffmpeg = "0.2.3"
